Update last of required parts; looks to be working on page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,3 +41,12 @@ h2 {
 	font-size: 32px;
 	color: Red;
 }
+
+img {
+	position: absolute;
+	float: right;
+	left: 600px;
+	-webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+	filter: FlipH;
+}
